--- a/projects/feedback/dialog/src/lib/content/content.component.scss
+++ b/projects/feedback/dialog/src/lib/content/content.component.scss
@@ -26,7 +26,7 @@
 .content {
   margin-top: 1.2rem;
   text-align: center;
-  color: var(--textcolor--secondary);
+  color: var(--theme--on-surface-variant);
 
   @media (min-width: 640px) {
     margin-top: 0;
