--- a/projects/feedback/dialog/src/lib/dialog.component.scss
+++ b/projects/feedback/dialog/src/lib/dialog.component.scss
@@ -1,11 +1,3 @@
-[data-theme='light'] :host {
-  --dialog__background-color: var(--color--white);
-}
-
-[data-theme='dark'] :host {
-  --dialog__background-color: var(--theme--background-accent);
-}
-
 :host {
   z-index: 1000;
   top: 0;
@@ -60,9 +52,8 @@
     bottom: 0;
     left: 0;
     right: 0;
-    opacity: 0.75;
-    background-color: var(--color--gray-500);
-    background-color: rgba(var(--color-rgb--gray-500), var(--bg-opacity));
+    opacity: 0.1;
+    background-color: rgb(var(--color-rgb--black) / var(--bg-opacity));
   }
 }
 
@@ -113,7 +104,7 @@
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
   transition-duration: 0.2s;
-  background-color: var(--dialog__background-color);
+  background-color: var(--theme--surface);
   opacity: 0;
 
   @media (min-width: 640px) {
