--- a/projects/form/checkbox/src/lib/checkbox.component.scss
+++ b/projects/form/checkbox/src/lib/checkbox.component.scss
@@ -1,35 +1,41 @@
 [data-theme='light'] :host {
-  --checkbox-border-color: var(--color--gray-300);
-  --checkbox__background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M5.707 7.293a1 1 0 0 0-1.414 1.414l2 2a1 1 0 0 0 1.414 0l4-4a1 1 0 0 0-1.414-1.414L7 8.586 5.707 7.293z'/%3e%3c/svg%3e");
-  --focus__box-shadow: 0 0 0 3px rgb(0 79 113 / 0.45);
-  --disabled__background-color: #b0b0b0;
+  --xcu-checkbox__background-image: var(
+    --checkbox__background-image,
+    url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M5.707 7.293a1 1 0 0 0-1.414 1.414l2 2a1 1 0 0 0 1.414 0l4-4a1 1 0 0 0-1.414-1.414L7 8.586 5.707 7.293z'/%3e%3c/svg%3e")
+  );
 }
 
 [data-theme='dark'] :host {
-  --checkbox-border-color: var(--color--gray-600);
-  --checkbox__background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg viewBox='0 0 16 16' fill='currentColor' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.707 7.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4a1 1 0 00-1.414-1.414L7 8.586 5.707 7.293z'/%3E%3C/svg%3E");
-  --focus__box-shadow: 0 0 0 3px rgb(87 193 142 / 0.45);
-  --disabled__background-color: #686868;
+  --xcu-checkbox__background-image: var(
+    --checkbox__background-image,
+    url("data:image/svg+xml;charset=utf-8,%3Csvg viewBox='0 0 16 16' fill='currentColor' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.707 7.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4a1 1 0 00-1.414-1.414L7 8.586 5.707 7.293z'/%3E%3C/svg%3E")
+  );
 }
 
 :host {
-  --checkbox-input-width: 1.6rem;
+  --xcu-checkbox-input__width: var(--checkbox-input__width, 1.6rem);
+  --xcu-checkbox__align: var(--checkbox__align, flex-start);
 
   cursor: pointer;
   display: flex;
-  align-items: var(--checkbox-align, flex-start);
+  align-items: var(--xcu-checkbox__align);
 
   &.xcu-checkbox--small {
-    --checkbox-input-width: 1.6rem;
-    --checkbox-font-size: 1.4rem;
-    --checkbox-margin--left: 0.8rem;
+    --xcu-checkbox-input__width: var(--checkbox-input__width, 1.6rem);
+    --xcu-checkbox__font-size: var(--checkbox__font-size, 1.4rem);
+    --xcu-checkbox__margin-left: var(--checkbox__margin-left, 0.8rem);
   }
 
   &.disabled {
+    --xcu-checkbox-label__color--disabled: var(
+      --checkbox-label__color--disabled,
+      rgb(var(--theme--on-surface) / 0.38)
+    );
+
     cursor: default;
 
     .xcu-checkbox-label {
-      color: var(--textcolor--secondary);
+      color: var(--xcu-checkbox-label__color--disabled);
     }
   }
 
@@ -38,48 +44,58 @@
   }
 
   &.bordered {
-    --checkbox-padding: 0.8rem 1.2rem;
-    --checkbox-border-radius: 2px;
-    --checkbox-border-width: 2px;
+    --xcu-checkbox__padding: var(--checkbox__padding, 0.8rem 1.2rem);
+    --xcu-checkbox__border-radius: var(--checkbox__border-radius, 2px);
+    --xcu-checkbox__border-width: var(--checkbox__border-width, 2px);
 
     label {
-      border-radius: var(--checkbox-border-radius, 2px);
-      border-width: var(--checkbox-border-width, 2px);
+      border-radius: var(--xcu-checkbox__border-radius, 2px);
+      border-width: var(--xcu-checkbox__border-width, 2px);
       transition: border-color 0.1s ease;
       will-change: border-color;
     }
 
     &.xcu-checkbox-checked label {
-      border-color: rgba(var(--theme-rgb--primary), 0.45);
+      border-color: rgb(var(--theme-rgb--primary) / 0.68);
     }
   }
 }
 
 label {
-  --checkbox-flex-direction: row;
+  --xcu-checkbox__flex-direction: var(--checkbox__flex-direction, row);
 
   cursor: pointer;
   display: flex;
-  flex-direction: var(--checkbox-flex-direction, row);
-  align-items: var(--checkbox-align, flex-start);
-  padding: var(--checkbox-padding, 0);
+  flex-direction: var(--xcu-checkbox__flex-direction);
+  align-items: var(--xcu-checkbox__align);
+  padding: var(--xcu-checkbox__padding, 0);
   width: 100%;
-  justify-content: var(--checkbox-justify, flex-start);
+  justify-content: var(--xcu-checkbox__justify, flex-start);
 
   &.checkbox--align-end {
-    --checkbox-flex-direction: row-reverse;
-    --checkbox-justify: flex-end;
+    --xcu-checkbox__flex-direction: row-reverse;
+    --xcu-checkbox__justify: flex-end;
   }
 }
 
 .xcu-checkbox-input__container {
+  --xcu-checkbox__input-margin: var(--checkbox__input-margin, 0);
+
   height: 2rem;
   display: flex;
   align-items: center;
-  margin: var(--checkbox-input-margin, 0);
+  margin: var(--xcu-checkbox__input-margin);
 }
 
 .xcu-checkbox-input {
+  --xcu-checkbox__border-color: var(
+    --checkbox__border-color,
+    var(--theme--on-surface)
+  );
+  --xcu-checkbox__color: var(--checkbox__color, var(--theme--on-primary));
+  --xcu-checkbox__background-color: var(--checkbox__background-color, initial);
+  --xcu-checkbox__border-radius: var(--checkbox__border-radius, 2px);
+
   appearance: none;
   color-adjust: exact;
   cursor: inherit;
@@ -88,12 +104,12 @@ label {
   background-origin: border-box;
   user-select: none;
   flex-shrink: 0;
-  height: var(--checkbox-input-width);
-  width: var(--checkbox-input-width);
-  color: var(--checkbox-color, var(--theme--primary));
-  background-color: var(--checkbox-background-color, initial);
-  border: 2px solid var(--checkbox-border-color, var(--theme--primary));
-  border-radius: var(--checkbox-border-radius, 2px);
+  height: var(--xcu-checkbox-input__width);
+  width: var(--xcu-checkbox-input__width);
+  color: var(--xcu-checkbox__color);
+  background-color: var(--xcu-checkbox__background-color);
+  border: 2px solid var(--xcu-checkbox__border-color);
+  border-radius: var(--xcu-checkbox__border-radius);
   transition-property: background-color, border-color, color, fill, stroke,
     opacity, box-shadow, transform;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -101,30 +117,40 @@ label {
   margin: 0;
 
   &:checked {
-    background-image: var(--checkbox__background-image);
+    --xcu-checkbox__background-color--selected: var(
+      --checkbox__background-color--selected,
+      var(--theme--background)
+    );
+
+    background-image: var(--xcu-checkbox__background-image);
     border-color: transparent;
     background-color: var(
-      --checkbox-background-color--selected,
+      --xcu-checkbox-background-color--selected,
       var(--theme--primary)
     );
     background-size: 100% 100%;
     background-position: 50%;
     background-repeat: no-repeat;
-    color: var(--checkbox-color--selected, var(--theme--background));
+    color: var(--xcu-checkbox__background-color--selected);
+
+    &:focus {
+      box-shadow: 0 0 0 3px rgb(var(--theme-rgb--primary) / 0.38);
+      border-color: var(--theme--primary);
+    }
   }
 
   &:focus {
     outline: none;
-    box-shadow: var(--focus__box-shadow);
-    border-color: var(--theme--primary);
+    box-shadow: 0 0 0 3px rgb(var(--theme-rgb--on-surface) / 0.38);
+    border-color: var(--theme--on-surface);
 
     &:invalid {
-      box-shadow: 0 0 0 3px rgb(211 47 47 / 0.45);
+      box-shadow: 0 0 0 3px rgb(var(--theme-rgb--error) / 0.38);
     }
   }
 
   &:invalid {
-    border-color: var(--color--warning);
+    border-color: var(--theme--error);
   }
 
   &[disabled],
@@ -134,33 +160,35 @@ label {
 }
 
 .xcu-checkbox-label {
-  gap: var(--checkbox-gap, 1.2rem);
+  --xcu-checkbox__gap: var(--checkbox__gap, 1.2rem);
+
+  gap: var(--xcu-checkbox__gap);
   font-weight: var(--font-weight--semi-bold);
   color: var(--textcolor);
 }
 
 .label-container {
-  // --checkbox-label-margin: 0 0 0 1.2rem;
+  // --xcu-checkbox-label__margin: 0 0 0 1.2rem;
 
   display: inline-flex;
   flex-direction: column;
-  font-size: var(--checkbox-font-size, 1.6rem);
-  margin: var(--checkbox-label-margin, 0);
+  font-size: var(--xcu-checkbox__font-size, 1.6rem);
+  margin: var(--xcu-checkbox-label__margin, 0);
   line-height: 2rem;
   color: var(--textcolor--secondary);
   font-weight: var(--font-weight--medium);
-  width: var(--checkbox__width, auto);
+  width: var(--xcu-checkbox__width, auto);
 }
 .checkbox--align-end .label-container {
-  --checkbox-label-margin: 0 1.2rem 0 0;
+  --xcu-checkbox-label__margin: 0 1.2rem 0 0;
 }
 
 .input-container {
   display: flex;
-  height: var(--checkbox-height, 2rem);
+  height: var(--xcu-checkbox-height, 2rem);
   align-items: center;
-  gap: var(--checkbox-padding, 1.2rem);
-  font-weight: var(--checkbox-font-weight, var(--font-weight--semi-bold));
+  gap: var(--xcu-checkbox__padding, 1.2rem);
+  font-weight: var(--xcu-checkbox-font-weight, var(--font-weight--semi-bold));
   color: var(--textcolor);
 }
 
