--- a/projects/form/form-field/src/lib/form-field.component.scss
+++ b/projects/form/form-field/src/lib/form-field.component.scss
@@ -1,13 +1,3 @@
-[data-theme='light'] .xcu-prefix,
-[data-theme='light'] .xcu-suffix {
-  --border-color: var(--color--gray-300);
-}
-
-[data-theme='dark'] .xcu-prefix,
-[data-theme='dark'] .xcu-suffix {
-  --border-color: var(--color--gray-600);
-}
-
 :host {
   display: block;
 }
@@ -21,15 +11,19 @@
   }
 
   &--invalid {
-    --border-color: var(--color--warning);
+    --xcu-form-field__affix--border-color: var(--theme--error);
   }
 
   label {
+    --xcu-form-field__label--color: var(
+      --form-field__label--color,
+      var(--theme--on-background)
+    );
     --cap-height: 0.828;
     --font-size: var(--font-size--small);
     --baseline-multi: 2;
 
-    color: var(--textcolor);
+    color: var(--xcu-form-field__label--color);
     display: block;
     font-weight: var(--font-weight--semi-bold);
     margin-bottom: calc(var(--font-line-height) - var(--baseline-offset) - 4px);
@@ -37,13 +31,24 @@
     user-select: none;
 
     &:after {
+      --xcu-form-field__label-after--color: var(
+        --form-field__label-after--color,
+        var(--theme--on-surface-variant)
+      );
+
+      color: var(--xcu-form-field__label-after--color);
       float: right;
-      color: var(--textcolor--secondary);
       font-weight: var(--font-weight--medium);
     }
   }
 
   p {
+    --xcu-form-field__supporting-text__color: var(
+      --form-field__supporting-text__color,
+      var(--theme--on-surface-variant)
+    );
+
+    color: var(--xcu-form-field__supporting-text__color);
     font-size: 1.2rem;
     font-style: italic;
     padding: 0 0 0 1.2rem;
@@ -81,9 +86,13 @@
 .xcu-prefix,
 .xcu-suffix {
   // --margin-bottom: 8px;
+  --xcu-form-field__affix--border-color: var(
+    --form-field__affix--border-color,
+    var(--theme--outline)
+  );
 
   align-items: center;
-  border: 1px solid var(--border-color);
+  border: 1px solid var(--xcu-form-field__affix--border-color);
   display: flex;
   font-size: var(--font-size--small);
   // margin-bottom: var(--margin-bottom, 0);
