--- a/projects/form/input/src/lib/input.component.scss
+++ b/projects/form/input/src/lib/input.component.scss
@@ -1,38 +1,40 @@
 [data-theme='light'] :host {
-  --background-color: var(--color--white);
-  --border-color: var(--color--gray-300);
-
-  &:disabled {
-    --background-color: var(--color--gray-100);
-    --border-color: var(--color--gray-200);
-  }
 }
 
 [data-theme='dark'] :host {
-  --background-color: var(--color--gray-700);
-  --border-color: var(--color--gray-600);
-
   &:-webkit-autofill {
-    --background-color: #1e293c;
-  }
-
-  &:disabled {
-    --background-color: var(--color--gray-800);
-    --border-color: var(--color--gray-700);
+    --xcu-input__background-color: var(--input__background-color);
   }
 }
 
 :host {
-  --color: var(--textcolor);
+  --xcu-input__color: var(
+    --input__color,
+    rgb(var(--theme-rgb--on-surface) / 0.87)
+  );
+  --xcu-input__background-color: var(
+    --input__background-color,
+    rgb(var(--theme-rgb--on-surface) / 0.04)
+  );
+  --xcu-input__border-color: var(
+    --input__border-color,
+    rgb(var(--theme-rgb--on-surface) / 0.6)
+  );
+  --xcu-input__font-size: var(--input__font-size, var(--font-size--small));
+  --xcu-input__font-weight: var(
+    --input__font-weight,
+    var(--font-weight--medium)
+  );
+
   appearance: none;
-  background-color: var(--background-color);
+  background-color: var(--xcu-input__background-color);
   border-radius: 2px;
-  border: 1px solid var(--border-color);
-  color: var(--color);
+  border: 1px solid var(--xcu-input__border-color);
+  color: var(--xcu-input__color);
   display: inline-flex;
   font-family: inherit;
-  font-size: var(--font-size--small);
-  font-weight: var(--font-weight--medium);
+  font-size: var(--xcu-input__font-size);
+  font-weight: var(--xcu-input__font-weight);
   line-height: 1.8rem;
   margin-top: 0;
   max-width: 64rem;
@@ -46,20 +48,31 @@
   &:focus,
   &:invalid {
     outline: none;
-    border: 1px solid var(--border-color);
-    box-shadow: inset 0 0 0 1px var(--border-color);
+    border: 1px solid var(--xcu-input__border-color);
+    box-shadow: inset 0 0 0 1px var(--xcu-input__border-color);
   }
 
   &:focus {
-    --border-color: var(--theme--primary);
+    --xcu-input__border-color: var(--theme--primary);
+  }
+
+  &:hover {
+    --xcu-input__background-color--hover: var(
+      --input__background-color--hover,
+      rgb(var(--theme-rgb--on-surface) / 0.08)
+    );
+
+    background-color: var(--xcu-input__background-color--hover);
   }
 
   &:invalid {
-    --border-color: var(--color--warning);
+    --xcu-input__border-color: var(--theme--error);
   }
 
   &:disabled {
-    --color: var(--color--gray-500);
+    --xcu-input__color: rgb(var(--theme-rgb--on-surface) / 0.38);
+    --xcu-input__background-color: rgb(var(--theme-rgb--on-surface) / 0.04);
+    --xcu-input__border-color: rgb(var(--theme-rgb--on-surface) / 0.12);
   }
 }
 
@@ -70,8 +83,8 @@
 
 :host-context(.xcu-form-field--invalid) {
   outline: none;
-  border: 1px solid var(--color--warning);
-  box-shadow: inset 0 0 0 1px var(--color--warning);
+  border: 1px solid var(--theme--error);
+  box-shadow: inset 0 0 0 1px var(--theme--error);
 }
 
 :host-context(.xcu-suffix.inline) {
