--- a/projects/layout/panel/src/lib/footer/footer.component.scss
+++ b/projects/layout/panel/src/lib/footer/footer.component.scss
@@ -1,13 +1,3 @@
-[data-theme='light'] :host {
-  --bordered__border-color: rgba(0, 0, 0, 0.05);
-  --colored__background-color: var(--color--gray-50);
-}
-
-[data-theme='dark'] :host {
-  --bordered__border-color: rgba(0, 0, 0, 0.15);
-  --colored__background-color: var(--color--gray-700);
-}
-
 :host {
   display: flex;
   flex-direction: row;
@@ -34,6 +24,10 @@
   }
 
   &.colored {
-    background-color: var(--colored__background-color);
+    --xcu-panel--footer__background-color: var(
+      --panel--footer__background-color,
+      var(--color--surface-2)
+    );
+    background-color: var(--xcu-panel--footer__background-color);
   }
 }
