--- a/projects/layout/panel/src/lib/panel.component.scss
+++ b/projects/layout/panel/src/lib/panel.component.scss
@@ -1,25 +1,6 @@
-[data-theme='light'] :host {
-  --panel__background-color: var(--color--white);
-  --panel__well__color: var(--color--gray-50);
-
-  &.well-on-gray {
-    background-color: var(--color--gray-200);
-  }
-}
-
-[data-theme='dark'] :host {
-  --panel__background-color: var(--theme--background-accent);
-  --panel__well__color: var(--color--gray-900);
-
-  &.well-on-gray {
-    background-color: var(--color--gray-800);
-  }
-}
-
 :host {
   border-radius: 2px;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
-  background-color: var(--panel__background-color);
   display: flex;
   flex-direction: column;
 
@@ -51,5 +32,9 @@
   &.well {
     background-color: var(--panel__well__color);
     box-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, 0.06);
+  }
+
+  &.bordered {
+    border-width: 1px;
   }
 }
