Revert "Angular CLI update for packages - @angular/core@next, @angular/cli@next, @angular/forms@next"
This reverts commit 3cd4175a648b3c37aded33e2f40dac758351742e.

--- a/projects/form/form-field/src/lib/form-field.component.scss
+++ b/projects/form/form-field/src/lib/form-field.component.scss
@@ -134,7 +134,7 @@
   );
   // --xcu-form-field__affix--background-color: var(
   //   --form-field__affix--background-color,
-  //   var(--theme--surface-container)
+  //   var(--color--surface-1)
   // );
   --xcu-form-field__affix--color: var(
     --form-field__affix--color,
