fix(form/checkbox): fix print color adjustment
The `color-adjust` property was changed to `print-color-adjust` in the checkbox component's SCSS file. This change ensures that the checkbox will be printed with exact colors, rather than being adjusted for better printing.

--- a/projects/form/checkbox/src/lib/checkbox.component.scss
+++ b/projects/form/checkbox/src/lib/checkbox.component.scss
@@ -97,7 +97,7 @@ label {
   --xcu-checkbox__border-radius: var(--checkbox__border-radius, 2px);
 
   appearance: none;
-  color-adjust: exact;
+  print-color-adjust: exact;
   cursor: inherit;
   display: inline-block;
   vertical-align: middle;
