--- a/projects/form/form-field/src/lib/form-field.component.html
+++ b/projects/form/form-field/src/lib/form-field.component.html
@@ -1,10 +1,8 @@
 <ng-content #label select="label"></ng-content>
 
-<div
-  class="input-wrapper"
-  [class.has-suffix]="suffixChildren.length"
-  [class.has-inline-suffix]="suffixChildren?.first?.inline"
->
+<div class="input-wrapper" [class.has-suffix]="suffixChildren.length"
+  [class.has-inline-suffix]="suffixChildren?.first?.inline">
+  <div class="state-layer"></div>
   <div class="prefix-container">
     <ng-content select="[xcu-prefix]"></ng-content>
   </div>
@@ -15,20 +13,8 @@
     <ng-content #input select="input,select"></ng-content>
 
     <span class="select-arrows">
-      <svg
-        class="h-5 w-5 text-gray-400"
-        viewBox="0 0 20 20"
-        width="20"
-        height="20"
-        fill="none"
-        stroke="currentColor"
-      >
-        <path
-          d="M7 7l3-3 3 3m0 6l-3 3-3-3"
-          stroke-width="1.5"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-        ></path>
+      <svg class="h-5 w-5 text-gray-400" viewBox="0 0 20 20" width="20" height="20" fill="none" stroke="currentColor">
+        <path d="M7 7l3-3 3 3m0 6l-3 3-3-3" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
       </svg>
     </span>
   </div>
